--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tu-org/sso-sdk",
+  "name": "@bigso/sso-sdk",
   "version": "0.1.1",
   "description": "SDK para SSO de BIGSO",
   "main": "dist/index.js",
