Actualizar configuración de publicación para GitLab y corregir nombre del paquete en package.json

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,1 @@
-//registry.npmjs.org/:_authToken=${NPM_TOKEN}
-@bigsoco:registry=https://npm.pkg.github.com
+@bigso:registry=https://gitlab.com/api/v4/projects/78127653/packages/npm/
