--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ on:
     branches:
       - main
 
-name: Publish SDK to npm
+name: Publish SDK to GitLab npm
 
 jobs:
   publish:
@@ -12,6 +12,7 @@ jobs:
     permissions:
       contents: read
       packages: write
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -20,7 +21,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          registry-url: https://npm.pkg.github.com/
+          registry-url: https://registry.gitlab.com/api/v4/packages/npm/
 
       - name: Install deps
         run: npm ci
@@ -31,4 +32,4 @@ jobs:
       - name: Publish
         run: npm publish --access public
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${CI_JOB_TOKEN}
